# linjal

./: .gitignore  CMakeLists.txt  Linjal.cpp  Linjal.h  Matrix.cpp  Matrix.h  README.md
examples/: CMakeLists.txt  additionExample.cpp  example1.cpp  initializationExample.cpp  inverseExample.cpp  matrixAddition.cpp  matrixInitialization.cpp  matrixMultiplicationExample.cpp  matrixNegation.cpp  matrixSubtraction.cpp  scalarMultiplicationExample.cpp  transposeExample.cpp  vectorAddition.cpp  vectorDotProduct.cpp  vectorInitialization.cpp  vectorMagnitude.cpp  vectorNegation.cpp  vectorScalarMultiplication.cpp  vectorSubtraction.cpp
