add_executable(matrixAddition matrixAddition.cpp)
target_link_libraries(matrixAddition LINK_PUBLIC Linjal)

add_executable(matrixInitialization matrixInitialization.cpp)
target_link_libraries(matrixInitialization LINK_PUBLIC Linjal)

add_executable(matrixMultiplication matrixMultiplication.cpp)
target_link_libraries(matrixMultiplication LINK_PUBLIC Linjal)

add_executable(matrixScalarMultiplication matrixScalarMultiplication.cpp)
target_link_libraries(matrixScalarMultiplication LINK_PUBLIC Linjal)

add_executable(matrixTranspose matrixTranspose.cpp)
target_link_libraries(matrixTranspose LINK_PUBLIC Linjal)