add_executable(matrixAddition matrixAddition.cpp)
target_link_libraries(matrixAddition LINK_PUBLIC Linjal)

add_executable(matrixInitialization matrixInitialization.cpp)
target_link_libraries(matrixInitialization LINK_PUBLIC Linjal)

add_executable(matrixMultiplication matrixMultiplication.cpp)
target_link_libraries(matrixMultiplication LINK_PUBLIC Linjal)

add_executable(matrixScalarMultiplication matrixScalarMultiplication.cpp)
target_link_libraries(matrixScalarMultiplication LINK_PUBLIC Linjal)

add_executable(matrixTranspose matrixTranspose.cpp)
target_link_libraries(matrixTranspose LINK_PUBLIC Linjal)

add_executable(vectorAddition vectorAddition.cpp)
target_link_libraries(vectorAddition LINK_PUBLIC Linjal)

add_executable(vectorInitialization vectorInitialization.cpp)
target_link_libraries(vectorInitialization LINK_PUBLIC Linjal)

add_executable(vectorScalarMultiplication vectorScalarMultiplication.cpp)
target_link_libraries(vectorScalarMultiplication LINK_PUBLIC Linjal)